[gd_scene load_steps=5 format=3 uid="uid://dvd7ykutrn244"]

[ext_resource type="Script" uid="uid://bj5dijknogkox" path="res://scripts/menu.gd" id="1_ouk20"]

[sub_resource type="Gradient" id="Gradient_lti8b"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 0.3019608)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ouk20"]
gradient = SubResource("Gradient_lti8b")

[sub_resource type="LabelSettings" id="LabelSettings_lti8b"]
font_size = 146

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ouk20")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -286.25
offset_top = 153.0
offset_right = 286.25
offset_bottom = 808.0
grow_horizontal = 2
texture = SubResource("GradientTexture1D_ouk20")

[node name="Titre" type="Label" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.5
offset_top = 57.0
offset_right = 199.5
offset_bottom = 257.0
grow_horizontal = 2
text = "Menu"
label_settings = SubResource("LabelSettings_lti8b")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -19.5
offset_right = 126.0
offset_bottom = 274.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Startbutton" type="Button" parent="TextureRect2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Start
"

[node name="Creditbutton" type="Button" parent="TextureRect2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Credits"

[node name="Leavebutton" type="Button" parent="TextureRect2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 41
text = "Exit"

[connection signal="button_down" from="TextureRect2/VBoxContainer/Startbutton" to="." method="_on_startbutton_button_down"]
[connection signal="button_down" from="TextureRect2/VBoxContainer/Creditbutton" to="." method="_on_creditbutton_button_down"]
[connection signal="button_down" from="TextureRect2/VBoxContainer/Leavebutton" to="." method="_on_leavebutton_button_down"]
